pyload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyload
  namespace: pyload
spec:
  selector:
    app: pyload
  ports:
  - name: web
    port: 8000
    targetPort: 8000
  - name: clicknload
    port: 9666
    targetPort: 9666
  type: ClusterIP
