pyload/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyload
  namespace: pyload
spec:
  ingressClassName: traefik
  rules:
  - host: downloader.yashbhangale.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pyload
            port:
              number: 8000
